# lead_hit_test_case

./: .env.example  1.txt  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml  script.py  setup.cfg
.github/workflows/: main.yaml  pre-commit.yaml
src/app/: constants.py  db.py  main.py  service.py
src/app/api/: __init__.py  endpoints.py  schemes.py
src/config/: config.py  config.yaml
src/tests/: conftest.py
src/tests/integration/: conftest.py  test_api.py
